--- a/archives2.html
+++ b/archives2.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta content="text/html; charset=utf-8" http-equiv="content-type">
 <title>Welcome to Archives</title>
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 <link href='https://fonts.googleapis.com/css?family=Heebo:300' rel='stylesheet' type='text/css'>
 <link href="apple-touch-icon-192x192-precomposed.png" rel="icon" sizes="192x192"><!-- For third-generation iPad with high-resolution Retina display: -->
 <link href="apple-touch-icon-144x144-precomposed.png" rel="apple-touch-icon-precomposed" sizes="144x144"><!-- For iPhone with high-resolution Retina display: -->
@@ -188,7 +189,7 @@ img.hover-shadow {
 <!-- first thing user sees -->
 
 <h2 style="text-align:center">&nbsp;&nbsp;<a href="http://kironroy.github.io"><img alt="Kiron Roy Logo" src="https://kironroy.github.io/logo2.svg" style="width:70px;height:70px;"></a></h2>
-<h4>&nbsp;&nbsp;Archives <div class="tap">&nbsp;&nbsp; tap or click a photo</div> </h4>
+<h4>&nbsp;&nbsp;Archives <div class="tap">&nbsp;&nbsp;<i class="fa fa-hand-o-up" aria-hidden="true"></i> tap or click a photo</div> </h4>
 
 <div class="row">
   <center>
