--- a/archives2.html
+++ b/archives2.html
@@ -241,6 +241,21 @@ img.hover-shadow {
   <div class="column">
     <img src="https://kironroy.github.io/images/fulls/archF16.jpg" style="width:100%" onclick="openModal();currentSlide(16)" class="hover-shadow cursor">
   </div>
+  <div class="column">
+    <img src="https://kironroy.github.io/images/fulls/archF17.jpg" style="width:100%" onclick="openModal();currentSlide(17)" class="hover-shadow cursor">
+  </div>
+  <div class="column">
+    <img src="https://kironroy.github.io/images/fulls/archF18.jpg" style="width:100%" onclick="openModal();currentSlide(18)" class="hover-shadow cursor">
+  </div>
+  <div class="column">
+    <img src="https://kironroy.github.io/images/fulls/archF19.jpg" style="width:100%" onclick="openModal();currentSlide(19)" class="hover-shadow cursor">
+  </div>
+  <div class="column">
+    <img src="https://kironroy.github.io/images/fulls/archF20.jpg" style="width:100%" onclick="openModal();currentSlide(20)" class="hover-shadow cursor">
+  </div>
+  <div class="column">
+    <img src="https://kironroy.github.io/images/fulls/archF21.jpg" style="width:100%" onclick="openModal();currentSlide(21)" class="hover-shadow cursor">
+  </div>
  </center>
 </div>
 
@@ -250,82 +265,107 @@ img.hover-shadow {
   <div class="modal-content">
 
     <div class="mySlides">
-      <div class="numbertext">1/16</div>
+      <div class="numbertext">1/21</div>
       <img src="https://kironroy.github.io/images/fulls/archF1.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">2/16</div>
+      <div class="numbertext">2/21</div>
       <img src="https://kironroy.github.io/images/fulls/archF2.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">3/16</div>
+      <div class="numbertext">3/21</div>
       <img src="https://kironroy.github.io/images/fulls/archF3.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">4/16</div>
+      <div class="numbertext">4/21</div>
       <img src="https://kironroy.github.io/images/fulls/archF4.jpg" style="width:100%">
     </div>
      <div class="mySlides">
-      <div class="numbertext">5/16</div>
+      <div class="numbertext">5/21</div>
       <img src="https://kironroy.github.io/images/fulls/archF5.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">6/16</div>
+      <div class="numbertext">6/21</div>
       <img src="https://kironroy.github.io/images/fulls/archF6.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">7/16</div>
+      <div class="numbertext">7/21</div>
       <img src="https://kironroy.github.io/images/fulls/archF7.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">8/16</div>
+      <div class="numbertext">8/21</div>
       <img src="https://kironroy.github.io/images/fulls/archF8.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">9/16</div>
+      <div class="numbertext">9/21</div>
       <img src="https://kironroy.github.io/images/fulls/archF9.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">10/16</div>
+      <div class="numbertext">10/21</div>
       <img src="https://kironroy.github.io/images/fulls/archF10.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">11/16</div>
+      <div class="numbertext">11/21</div>
       <img src="https://kironroy.github.io/images/fulls/archF11.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">12/16</div>
+      <div class="numbertext">12/21</div>
       <img src="https://kironroy.github.io/images/fulls/archF12.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">13/16</div>
+      <div class="numbertext">13/21</div>
       <img src="https://kironroy.github.io/images/fulls/archF13.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">14/16</div>
+      <div class="numbertext">14/21</div>
       <img src="https://kironroy.github.io/images/fulls/archF14.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">15/16</div>
+      <div class="numbertext">15/21</div>
       <img src="https://kironroy.github.io/images/fulls/archF15.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">16/16</div>
+      <div class="numbertext">16/21</div>
       <img src="https://kironroy.github.io/images/fulls/archF16.jpg" style="width:100%">
+    </div>
+
+    <div class="mySlides">
+      <div class="numbertext">17/21</div>
+      <img src="https://kironroy.github.io/images/fulls/archF17.jpg" style="width:100%">
+    </div>
+
+    <div class="mySlides">
+      <div class="numbertext">18/21</div>
+      <img src="https://kironroy.github.io/images/fulls/archF18.jpg" style="width:100%">
+    </div>
+
+    <div class="mySlides">
+      <div class="numbertext">19/21</div>
+      <img src="https://kironroy.github.io/images/fulls/archF19.jpg" style="width:100%">
+    </div>
+
+    <div class="mySlides">
+      <div class="numbertext">20/21</div>
+      <img src="https://kironroy.github.io/images/fulls/archF20.jpg" style="width:100%">
+    </div>
+
+    <div class="mySlides">
+      <div class="numbertext">21/21</div>
+      <img src="https://kironroy.github.io/images/fulls/archF21.jpg" style="width:100%">
     </div>
 
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
