--- a/night2.html
+++ b/night2.html
@@ -221,6 +221,15 @@ tap or click a photo</div> </h4>
   <div class="column">
     <img src="https://kironroy.github.io/images/fulls/13.jpg" style="width:100%" onclick="openModal();currentSlide(13)" class="hover-shadow cursor">
   </div>
+  <div class="column">
+    <img src="https://kironroy.github.io/images/fulls/14.jpg" style="width:100%" onclick="openModal();currentSlide(13)" class="hover-shadow cursor">
+  </div>
+  <div class="column">
+    <img src="https://kironroy.github.io/images/fulls/15.jpg" style="width:100%" onclick="openModal();currentSlide(13)" class="hover-shadow cursor">
+  </div>
+  <div class="column">
+    <img src="https://kironroy.github.io/images/fulls/16.jpg" style="width:100%" onclick="openModal();currentSlide(13)" class="hover-shadow cursor">
+  </div>
 </center>
 </div>
 
@@ -230,67 +239,82 @@ tap or click a photo</div> </h4>
   <div class="modal-content">
 
     <div class="mySlides">
-      <div class="numbertext">1/13</div>
+      <div class="numbertext">1/16</div>
       <img src="https://kironroy.github.io/images/fulls/01.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">2/13</div>
+      <div class="numbertext">2/16</div>
       <img src="https://kironroy.github.io/images/fulls/02.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">3/13</div>
+      <div class="numbertext">3/16</div>
       <img src="https://kironroy.github.io/images/fulls/03.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">4/13</div>
+      <div class="numbertext">4/16</div>
       <img src="https://kironroy.github.io/images/fulls/04.jpg" style="width:100%">
     </div>
      <div class="mySlides">
-      <div class="numbertext">5/13</div>
+      <div class="numbertext">5/16</div>
       <img src="https://kironroy.github.io/images/fulls/05.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">6/13</div>
+      <div class="numbertext">6/16</div>
       <img src="https://kironroy.github.io/images/fulls/06.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">7/13</div>
+      <div class="numbertext">7/16</div>
       <img src="https://kironroy.github.io/images/fulls/07.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">8/13</div>
+      <div class="numbertext">8/16</div>
       <img src="https://kironroy.github.io/images/fulls/08.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">9/13</div>
+      <div class="numbertext">9/16</div>
       <img src="https://kironroy.github.io/images/fulls/09.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">10/13</div>
+      <div class="numbertext">10/16</div>
       <img src="https://kironroy.github.io/images/fulls/10.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">11/13</div>
+      <div class="numbertext">11/16</div>
       <img src="https://kironroy.github.io/images/fulls/11.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">12/13</div>
+      <div class="numbertext">12/16</div>
       <img src="https://kironroy.github.io/images/fulls/12.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">13/13</div>
+      <div class="numbertext">13/16</div>
       <img src="https://kironroy.github.io/images/fulls/13.jpg" style="width:100%">
+    </div>
+
+    <div class="mySlides">
+      <div class="numbertext">14/16</div>
+      <img src="https://kironroy.github.io/images/fulls/14.jpg" style="width:100%">
+    </div>
+
+    <div class="mySlides">
+      <div class="numbertext">15/16</div>
+      <img src="https://kironroy.github.io/images/fulls/15.jpg" style="width:100%">
+    </div>
+
+    <div class="mySlides">
+      <div class="numbertext">16/16</div>
+      <img src="https://kironroy.github.io/images/fulls/16.jpg" style="width:100%">
     </div>
 
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
