--- a/night2.html
+++ b/night2.html
@@ -233,7 +233,7 @@ tap or click a photo</div> </h4>
 </center>
 </div>
 
-<!-- inside styling on thumbs -->
+<!-- inside styling on thumbs 16 photos -->
 <div id="myModal" class="modal">
   <span class="close cursor" onclick="closeModal()">&times;</span>
   <div class="modal-content">
