--- a/archives2.html
+++ b/archives2.html
@@ -259,7 +259,7 @@ img.hover-shadow {
  </center>
 </div>
 
-<!-- inside styling on thumbs -->
+<!-- inside styling on thumbs 16 photos -->
 <div id="myModal" class="modal">
   <span class="close cursor" onclick="closeModal()">&times;</span>
   <div class="modal-content">
