--- a/archives2.html
+++ b/archives2.html
@@ -186,7 +186,7 @@ img.hover-shadow {
 </style>
 <body>
 
-<!-- first thing user sees -->
+<!-- first items user sees -->
 
 <h2 style="text-align:center">&nbsp;&nbsp;<a href="http://kironroy.github.io"><img alt="Kiron Roy Logo" src="https://kironroy.github.io/logo2.svg" style="width:70px;height:70px;"></a></h2>
 <h4>&nbsp;&nbsp;Archives <div class="tap">&nbsp;&nbsp;<i class="fa fa-hand-o-up" aria-hidden="true"></i> tap or click a photo</div> </h4>
@@ -259,7 +259,7 @@ img.hover-shadow {
  </center>
 </div>
 
-<!-- inside styling on thumbs 16 photos -->
+<!-- inside styling on thumbs 21 items -->
 <div id="myModal" class="modal">
   <span class="close cursor" onclick="closeModal()">&times;</span>
   <div class="modal-content">
