--- a/night2.html
+++ b/night2.html
@@ -174,7 +174,7 @@ img.hover-shadow {
 </style>
 <body>
 
-<!-- first thing user sees -->
+<!-- first photos user sees -->
 
 <h2 style="text-align:center">&nbsp;&nbsp;<a href="http://kironroy.github.io"><img alt="Kiron Roy Logo" src="https://kironroy.github.io/logo2.svg" style="width:70px;height:70px;"></a></h2>
 <h4>&nbsp;&nbsp;Night Scene <div class="tap">&nbsp;&nbsp;<i class="fa fa-hand-o-up" aria-hidden="true"></i>
