--- a/resume.html
+++ b/resume.html
@@ -99,8 +99,9 @@
             <h2>freeCodeCamp</h2>
             <p class="subDetails presentDetails"><a href="https://www.freecodecamp.com/kironroy">Computer Software Engineering, Present</a></p>
             <p class="subDetails">&nbsp;&nbsp;Preparatory Work:</p>
-            <p class="subDetails">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp<a href="https://www.codecademy.com/kironroy">Codecademy</a></p>
-            <p class="subDetails">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp<a href="https://github.com/kironroy/ruby_hardway">Learn Ruby the Hardway</a></p>
+            <p class="subDetails">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.sololearn.com/Certificate/1059-5011852/pdf/">Solo Learn PHP</a></p>
+            <p class="subDetails">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.codecademy.com/kironroy">Codecademy</a></p>
+            <p class="subDetails">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://github.com/kironroy/ruby_hardway">Learn Ruby the Hardway</a></p>
             <p></p>
           </article>
           <article>
