--- a/archives2.html
+++ b/archives2.html
@@ -316,6 +316,9 @@ img.hover-shadow {
   <div class="column">
     <img src="https://kironroy.github.io/images/fulls/archF42.jpg" style="width:100%" onclick="openModal();currentSlide(42)" class="hover-shadow cursor">
   </div>
+  <div class="column">
+    <img src="https://kironroy.github.io/images/fulls/archF43.jpg" style="width:100%" onclick="openModal();currentSlide(43)" class="hover-shadow cursor">
+  </div>
  </center>
 </div>
 
@@ -325,213 +328,218 @@ img.hover-shadow {
   <div class="modal-content">
 
     <div class="mySlides">
-      <div class="numbertext">1/42</div>
+      <div class="numbertext">1/43</div>
       <img src="https://kironroy.github.io/images/fulls/archF1.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">2/42</div>
+      <div class="numbertext">2/43</div>
       <img src="https://kironroy.github.io/images/fulls/archF2.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">3/42</div>
+      <div class="numbertext">3/43</div>
       <img src="https://kironroy.github.io/images/fulls/archF3.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">4/42</div>
+      <div class="numbertext">4/43</div>
       <img src="https://kironroy.github.io/images/fulls/archF4.jpg" style="width:100%">
     </div>
      <div class="mySlides">
-      <div class="numbertext">5/42</div>
+      <div class="numbertext">5/43</div>
       <img src="https://kironroy.github.io/images/fulls/archF5.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">6/42</div>
+      <div class="numbertext">6/43</div>
       <img src="https://kironroy.github.io/images/fulls/archF6.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">7/42</div>
+      <div class="numbertext">7/43</div>
       <img src="https://kironroy.github.io/images/fulls/archF7.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">8/42</div>
+      <div class="numbertext">8/43</div>
       <img src="https://kironroy.github.io/images/fulls/archF8.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">9/42</div>
+      <div class="numbertext">9/43</div>
       <img src="https://kironroy.github.io/images/fulls/archF9.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">10/42</div>
+      <div class="numbertext">10/43</div>
       <img src="https://kironroy.github.io/images/fulls/archF10.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">11/42</div>
+      <div class="numbertext">11/43</div>
       <img src="https://kironroy.github.io/images/fulls/archF11.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">12/42</div>
+      <div class="numbertext">12/43</div>
       <img src="https://kironroy.github.io/images/fulls/archF12.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">13/42</div>
+      <div class="numbertext">13/43</div>
       <img src="https://kironroy.github.io/images/fulls/archF13.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">14/42</div>
+      <div class="numbertext">14/43</div>
       <img src="https://kironroy.github.io/images/fulls/archF14.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">15/42</div>
+      <div class="numbertext">15/43</div>
       <img src="https://kironroy.github.io/images/fulls/archF15.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">16/42</div>
+      <div class="numbertext">16/43</div>
       <img src="https://kironroy.github.io/images/fulls/archF16.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">17/42</div>
+      <div class="numbertext">17/43</div>
       <img src="https://kironroy.github.io/images/fulls/archF17.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">18/42</div>
+      <div class="numbertext">18/43</div>
       <img src="https://kironroy.github.io/images/fulls/archF18.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">19/42</div>
+      <div class="numbertext">19/43</div>
       <img src="https://kironroy.github.io/images/fulls/archF19.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">20/42</div>
+      <div class="numbertext">20/43</div>
       <img src="https://kironroy.github.io/images/fulls/archF20.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">21/42</div>
+      <div class="numbertext">21/43</div>
       <img src="https://kironroy.github.io/images/fulls/archF21.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">22/42</div>
+      <div class="numbertext">22/43</div>
       <img src="https://kironroy.github.io/images/fulls/archF22.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">23/42</div>
+      <div class="numbertext">23/43</div>
       <img src="https://kironroy.github.io/images/fulls/archF23.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">24/42</div>
+      <div class="numbertext">24/43</div>
       <img src="https://kironroy.github.io/images/fulls/archF24.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">25/42</div>
+      <div class="numbertext">25/43</div>
       <img src="https://kironroy.github.io/images/fulls/archF25.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">26/42</div>
+      <div class="numbertext">26/43</div>
       <img src="https://kironroy.github.io/images/fulls/archF26.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">27/42</div>
+      <div class="numbertext">27/43</div>
       <img src="https://kironroy.github.io/images/fulls/archF27.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">28/42</div>
+      <div class="numbertext">28/43</div>
       <img src="https://kironroy.github.io/images/fulls/archF28.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">29/42</div>
+      <div class="numbertext">29/43</div>
       <img src="https://kironroy.github.io/images/fulls/archF29.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">30/42</div>
+      <div class="numbertext">30/43</div>
       <img src="https://kironroy.github.io/images/fulls/archF30.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">31/42</div>
+      <div class="numbertext">31/43</div>
       <img src="https://kironroy.github.io/images/fulls/archF31.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">32/42</div>
+      <div class="numbertext">32/43</div>
       <img src="https://kironroy.github.io/images/fulls/archF32.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">33/42</div>
+      <div class="numbertext">33/43</div>
       <img src="https://kironroy.github.io/images/fulls/archF33.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">34/42</div>
+      <div class="numbertext">34/43</div>
       <img src="https://kironroy.github.io/images/fulls/archF34.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">35/42</div>
+      <div class="numbertext">35/43</div>
       <img src="https://kironroy.github.io/images/fulls/archF35.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">36/42</div>
+      <div class="numbertext">36/43</div>
       <img src="https://kironroy.github.io/images/fulls/archF36.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">37/42</div>
+      <div class="numbertext">37/43</div>
       <img src="https://kironroy.github.io/images/fulls/archF37.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">38/42</div>
+      <div class="numbertext">38/43</div>
       <img src="https://kironroy.github.io/images/fulls/archF38.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">39/42</div>
+      <div class="numbertext">39/43</div>
       <img src="https://kironroy.github.io/images/fulls/archF39.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">39/42</div>
+      <div class="numbertext">40/43</div>
       <img src="https://kironroy.github.io/images/fulls/archF40.jpg" style="width:100%">
     </div>
 
 
     <div class="mySlides">
-      <div class="numbertext">40/42</div>
+      <div class="numbertext">41/43</div>
       <img src="https://kironroy.github.io/images/fulls/archF41.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">41/42</div>
+      <div class="numbertext">42/43</div>
       <img src="https://kironroy.github.io/images/fulls/archF42.jpg" style="width:100%">
+    </div>
+
+    <div class="mySlides">
+      <div class="numbertext">43/43</div>
+      <img src="https://kironroy.github.io/images/fulls/archF43.jpg" style="width:100%">
     </div>
 
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
