--- a/resume.html
+++ b/resume.html
@@ -111,6 +111,8 @@
 						<p class="subDetails presentDetails"><a href="https://www.freecodecamp.com/kironroy">Computer Software Engineering, Present</a></p>
 						<p class="subDetails">&nbsp;&nbsp;Preparatory Work:</p>
 						<p class="subDetails">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.sololearn.com/Certificate/1059-5011852/pdf/">Solo Learn PHP</a></p>
+												<p class="subDetails">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.apress.com/us/book/9781484206362"><i>PHP Solutions
+Dynamic Web Design Made Easy</i></a></p>
 						<p class="subDetails">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.codecademy.com/kironroy">Codecademy</a></p>
 						<p class="subDetails">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://github.com/kironroy/ruby_hardway">Learn Ruby the Hardway</a></p>
 						<p></p>
