--- a/resume.html
+++ b/resume.html
@@ -41,11 +41,11 @@
 			<section>
 				<article>
 					<div class="sectionTitle">
-						<h1>Interest Areas</h1>
+						<h1>Interest Area</h1>
 					</div>
 					<div class="sectionContent">
 						<h2>Web Development</h2>
-            <p>Front-end and PHP backend</p>
+            <p>Front-end and PHP/mySQL backend</p>
 					</div>
 				</article>
 				<div class="clear"></div>
