--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 	<meta content="text/html; charset=utf-8" http-equiv="content-type">
 	<title>Kiron Roy</title>
 	<link href='https://fonts.googleapis.com/css?family=Heebo:300' rel='stylesheet' type='text/css'>
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	<link href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
 	<link href="/favicon.ico" rel="icon" type="image/x-icon"><!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-  <script src="js/jquery.min.js">
+
+	<script src="js/jquery.min.js">
 	</script>
 	<script src="js/jquery.scrolly.min.js">
 	</script>
@@ -19,7 +20,7 @@
 	<script src="js/skel-layers.min.js">
 	</script>
 	<script src="js/init.js">
-  </script> <noscript>
+	</script> <noscript>
 	<link href="favicon.ico" rel="shortcut icon">
 	<link href="css/skel.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
@@ -37,7 +38,7 @@
 		<div class="top">
 			<!-- Logo -->
 			<div id="logo">
-				<!--<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>-->
+				<!--<center><span class="image avatar48"><img src="logo2.svg" style="width:50px;height:50px;"></span></center>-->
 				<h1 id="title">Kiron Roy</h1><br>
 			</div><!-- Nav -->
 			<nav id="nav">
@@ -334,27 +335,18 @@
 							</header>
 						</article>
 						<article class="item">
-							<a class="image fit" href="https://a.tiles.mapbox.com/v4/kironroymaps.nofjgkk1/page.html?access_token=pk.eyJ1Ijoia2lyb25yb3ltYXBzIiwiYSI6Ijg1MzYyYjYxOGUyZTZmZjQ2MTBjY2EyNGFiNjU2YTUwIn0.xZ6rI7mUH2xSewoxdm_GkQ#3/29.84/-87.36"><!--*************************************SVG CODE AFTER THIS SKETCH*****************************************-->
+							<a class="image fit" href="https://kironroy.000webhostapp.com/"><!--************SVG CODE AFTER THIS PHP****************************-->
 							 <!-- Generator: Adobe Illustrator 14.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 43363)  -->
 							 <svg height="150px" id="Layer_1" version="1.1" viewbox="0 0 68 150" width="68px" x="0px" xmlns="http://www.w3.org/2000/svg" y="0px">
-							<path d="M6.254,60.907c0-17.397,12.423-31.5,27.746-31.5c15.322,0,27.746,14.103,27.746,31.5 C61.746,78.303,34,128.25,34,128.25S6.254,78.303,6.254,60.907z" fill="#E5F3CE" stroke="#000000"></path>
+							<path d="M6.254,60.907c0-17.397,12.423-31.5,27.746-31.5c15.322,0,27.746,14.103,27.746,31.5 C61.746,78.303,34,128.25,34,128.25S6.254,78.303,6.254,60.907z" fill="#000099" stroke="#000099"></path>
 							<g>
+								<circle cx="34" cy="56.613" fill="#000099" r="18.125" stroke="#FFCC00" stroke-miterlimit="1" stroke-width="2"></circle>
 								<g>
-									<path d="M36.795,74.333c1.1,0,2.128,0.891,2.285,1.979l2.395,16.636c0.157,1.089-0.184,2.748-0.756,3.688l-5.678,9.312 c-0.573,0.939-1.509,0.939-2.082,0l-5.677-9.312c-0.573-0.939-0.913-2.599-0.756-3.688l2.394-16.636 c0.157-1.088,1.185-1.979,2.285-1.979H36.795z"></path>
+									<path d="M33.942,47.876c0.035,0,0.08,0,0.123,0c0.466,1.551,0.921,3.112,1.403,4.649c1.55,0,3.097,0,4.646,0 c0,0.039,0,0.082,0,0.123c-1.297,0.909-2.526,1.874-3.737,2.872c0.431,1.552,0.97,2.994,1.353,4.586c-0.043,0-0.086,0-0.129,0 c-1.146-0.959-2.354-1.837-3.542-2.753c-1.301,0.839-2.462,1.82-3.666,2.753c-0.037,0-0.08,0-0.12,0 c0.43-1.566,0.914-3.08,1.401-4.586c-1.232-1.005-2.526-1.957-3.788-2.937c0-0.021,0-0.039,0-0.058c1.55,0,3.1,0,4.645,0 C33.027,51.001,33.521,49.477,33.942,47.876z" fill="#FFCC00"></path>
 								</g>
-								<g>
-									<path d="M33.832,76.471c0-1.1-0.9-2-2-2h-0.628c-1.1,0-2.128,0.891-2.285,1.98l-2.394,16.635 c-0.156,1.089,0.184,2.748,0.756,3.688l5.509,9.037c0.573,0.939,1.041,0.808,1.041-0.292V76.471z" fill="#333333"></path>
-								</g>
-								<circle cx="34" cy="107.655" r="1.088"></circle>
-								<circle cx="34" cy="90.67" fill="#E5F3CE" r="1.629"></circle>
-								<line fill="none" stroke="#E5F3CE" stroke-width="0.5" x1="34" x2="34" y1="90.67" y2="111.559"></line>
-								<g>
-									<path d="M37.101,52.276c1.1,0,2.104,0.894,2.229,1.987l2.693,23.366c0.126,1.093-0.671,1.987-1.771,1.987H27.747 c-1.1,0-1.897-0.895-1.771-1.987l2.694-23.366c0.126-1.093,1.129-1.987,2.229-1.987H37.101z"></path>
-								</g>
-								<polygon points="39.883,58.903 28.118,58.903 28.118,30.407 34,29.407 39.883,30.407"></polygon>
-							</g></svg></a> <!--**************************************SVG CODE AFTER THIS SKETCH ENDED *****************************************-->
+							</g></svg></a> <!--**************************************SVG CODE AFTER THIS PHP ENDED *****************************************-->
 							<header>
-								<h3>Sketch Tour</h3>
+								<h3>Europe PHP</h3>
 							</header>
 						</article>
 					</div>
