--- a/redwoods.html
+++ b/redwoods.html
@@ -69,6 +69,7 @@
 			<p><a href="https://www.youtube.com/watch?v=V49IovRSJDs">Ecological Succession</a></p>
 			<p><a href="https://www.youtube.com/watch?v=25Jzk7s635s">National Geographic Redwood Photograph with three Canon EOS 1Ds Mark II</a></p>
 			<p><a href="https://www.youtube.com/watch?v=sIoZ0J7x1Cg">Climbing the World's Tallest Tree: Hyperion Coast Redwood</a></p>
+			<p><a href="https://www.youtube.com/watch?v=mS1C5TfBfuo">Finding HYPERION (full length edit) </a></p>
 			<p><a href="https://www.youtube.com/watch?v=F3j8q6x-gE0">Tallest tree found in Redwood National Park (Part 1)</a></p>
 			<p><a href="https://www.youtube.com/watch?v=6zWbjqAON34">Tallest tree found in Redwood National Park (Part 2)</a></p>
 			<p><a href="https://www.youtube.com/watch?v=V5T8WT_anfA">Screaming Titans</a></p>
