--- a/resume.html
+++ b/resume.html
@@ -89,6 +89,8 @@
 						<li>Git</li>
 						<li>HTML/CSS</li>
 						<li>JavaScript/jQuery</li>
+						<li>MySQL</li>
+						<li>CMS/CRUD</li>
             <li>PHP</li>
 						<li>Product Photography</li>
 						<li>Ruby</li>
