--- a/resume.html
+++ b/resume.html
@@ -45,7 +45,7 @@
 					</div>
 					<div class="sectionContent">
 						<h2>Web Development</h2>
-            <p>Front-end and PHP/mySQL backend</p>
+            <p>HTML/CSS/Js Front-end with PHP/MySQL backend</p>
 					</div>
 				</article>
 				<div class="clear"></div>
