--- a/comic.html
+++ b/comic.html
@@ -14,7 +14,7 @@
     <!-- These are the styles for the comic -->
     <style>
       body {
-        background-color: #2c993e;
+        background-color: #1e6b2b;
         font-family: 'Delius Swash Caps', cursive;
         line-height: 1.2;
         text-align: center;
