--- a/resume.html
+++ b/resume.html
@@ -45,7 +45,9 @@
 					</div>
 					<div class="sectionContent">
 						<h2>Web Development</h2>
-            <p>HTML/CSS/Js Front-end with PHP/MySQL backend</p>
+            <p>Seeking a entry level position in Front-End Web Development.
+							 I know the big three: HTML/CSS/JavaScript as well as the back-end with PHP and MySQL.
+            </p>
 					</div>
 				</article>
 				<div class="clear"></div>
