--- a/redwoods.html
+++ b/redwoods.html
@@ -39,10 +39,14 @@
 			<p><em><a href="http://www.goodreads.com/book/show/106327.Giants_in_the_Earth">Giants in the Earth: The California Redwoods</a></em></p><em></em>
 			<p><em><a href="http://www.goodreads.com/book/show/712044.From_the_Redwood_Forest">From the Redwood Forest: Ancient Trees, the Bottom Line, and a Headwaters Journey</a></em></p><em></em>
 			<p><em><a href="http://www.npbooksonline.com/redwood">Redwood - The Story Behind the Scenery</a></em></p>
+			<strong>Other Trees</strong>
+			<p><em><a href="https://www.publishersweekly.com/978-1-55365-016-4">Tree: A Life Story </a></em></p>
+			<p><em><a href="http://penguinrandomhouse.ca/books/182225/golden-spruce#9780676976465">The Golden Spruce
+			 A True Story of Myth, Madness and Greed</a></em></p>
 		</div><br>
 		<div class="w3-third">
 			<h2><i aria-hidden="true" class="fa fa-link"></i> Links</h2>
-			<p><strong><a href="https://kironroy.github.io/comic">___My Forest Trip!___</a></strong></p>
+			<p><strong><a href="https://kironroy.github.io/comic">My Forest Trip!</a></strong></p>
       <p><a href="https://repl.it/DbdW/12/">Redwoods Ruby programming</a></p>
 			<p><a href="http://www.mdvaden.com/redwood_hyperion.shtml">Hyperion Coast Redwood</a></p>
 			<p><a href="http://www.mdvaden.com/grove_of_titans.shtml">MD Vaden's main page</a></p>
