--- a/resume.html
+++ b/resume.html
@@ -46,7 +46,8 @@
 					<div class="sectionContent">
 						<h2>Web Development</h2>
             <p>Seeking a entry level position in Front-End Web Development.
-							 I know the big three: HTML/CSS/JavaScript as well as the back-end with PHP and MySQL.
+							 Well versed in the three components of front-end: HTML/CSS/JavaScript
+							 and the back-end with PHP and MySQL.
             </p>
 					</div>
 				</article>
