--- a/resume.html
+++ b/resume.html
@@ -30,6 +30,8 @@
 					</li>
 					<li>github: &nbsp; <a href="https://github.com/kironroy">kironroy repositories</a>
 					</li>
+					<li>github wiki: &nbsp; <a href="https://github.com/kironroy/kironroy.github.io/wiki">kironroy wiki</a>
+					</li>
 					<li>website: &nbsp; <a href="http://kironroy.github.io/">portfolio</a>
 					</li>
 					<li></li>
