--- a/resume.html
+++ b/resume.html
@@ -43,7 +43,7 @@
 			<section>
 				<article>
 					<div class="sectionTitle">
-						<h1>Interest Area</h1>
+						<h1>About Me</h1>
 					</div>
 					<div class="sectionContent">
 						<h2>Web Development</h2>
