--- a/resume.html
+++ b/resume.html
@@ -127,6 +127,7 @@ Dynamic Web Design Made Easy</i></a></p>
 					<article>
 						<h2>CSUF Extension</h2>
 						<p class="subDetails"><a href="https://kironroy.github.io/kiron_roy_gis_cert.pdf">Certificate in Geographic Information Systems, 2014</a></p>
+            <p class="subDetails"><a href="https://kironroy.github.io/techshop_portland.pdf">Tech Shop GIS Project</a></p>
 						<p></p>
 					</article>
 					<article>
