--- a/resume.html
+++ b/resume.html
@@ -50,7 +50,8 @@
             <p>Seeking a entry level position in Front-End Web Development.
 							 Well versed in the three components of front-end: HTML/CSS/JavaScript
 							 and the back-end with PHP and MySQL.
-            </p>
+						</p>
+						<p> <a href="https://www.jrdevjobs.com/profiles/kiron-roy">Junior Development Web Profile</a> </p>
 					</div>
 				</article>
 				<div class="clear"></div>
