--- a/redwoods.html
+++ b/redwoods.html
@@ -28,7 +28,6 @@
 			<input checked id="tab-1" name="tabgroup" type="radio"> <label for="tab-1">Books</label>
 			<div class="tab__content">
 				<br>
-				<br>
 				<h2><i aria-hidden="true" class="fa fa-book"></i> Books</h2>
 				<p><em><a href="http://jaredfarmer.net/books/trees-in-paradise/">Trees in Paradise: A California History</a></em></p><em></em>
 				<p><em><a href="https://en.wikipedia.org/wiki/The_Wild_Trees">The Wild Trees</a></em></p><em></em>
@@ -37,7 +36,8 @@
 				<p><em><a href="http://www.cachumapress.com/catalog/coast-redwood.html">COAST REDWOOD A Natural and Cultural History</a></em></p><em></em>
 				<p><em><a href="http://www.goodreads.com/book/show/106327.Giants_in_the_Earth">Giants in the Earth: The California Redwoods</a></em></p><em></em>
 				<p><em><a href="http://www.goodreads.com/book/show/712044.From_the_Redwood_Forest">From the Redwood Forest: Ancient Trees, the Bottom Line, and a Headwaters Journey</a></em></p><em></em>
-				<p><em><a href="http://www.npbooksonline.com/redwood">Redwood - The Story Behind the Scenery</a></em></p><strong>Other Trees</strong>
+				<p><em><a href="http://www.npbooksonline.com/redwood">Redwood - The Story Behind the Scenery</a></em></p>
+				&nbsp;&nbsp;&nbsp;<strong>~ Other Trees ~</strong>
 				<p><em><a href="https://www.publishersweekly.com/978-1-55365-016-4">Tree: A Life Story</a></em></p>
 				<p><em><a href="http://penguinrandomhouse.ca/books/182225/golden-spruce#9780676976465">The Golden Spruce A True Story of Myth, Madness and Greed</a></em></p>
 			</div>
@@ -45,7 +45,6 @@
 		<div class="tab">
 			<input id="tab-2" name="tabgroup" type="radio"> <label for="tab-2">Links</label>
 			<div class="tab__content">
-				<br>
 				<br>
 				<h2><i aria-hidden="true" class="fa fa-link"></i> Links</h2>
 				<p><strong><a href="https://kironroy.github.io/comic">My Forest Trip!</a></strong></p>
@@ -63,7 +62,6 @@
 			<input id="tab-3" name="tabgroup" type="radio"> <label for="tab-3">Maps</label>
 			<div class="tab__content">
 				<br>
-				<br>
 				<h2><i aria-hidden="true" class="fa fa-map"></i> Maps</h2>
 				<p><a href="http://famousredwoods.com/">All Redwoods</a></p>
 				<p><a href="https://www.google.com/maps/place/41%C2%B012'17.7%22N+124%C2%B000'56.0%22W/@41.20491,-124.0177487,689m/data=!3m2!1e3!4b1!4m5!3m4!1s0x0:0x0!8m2!3d41.20491!4d-124.01556">Hyperion Tree</a></p>
@@ -79,7 +77,6 @@
 		<div class="tab">
 			<input id="tab-4" name="tabgroup" type="radio"> <label for="tab-4">YouTube</label>
 			<div class="tab__content">
-				<br>
 				<br>
 				<h2><i aria-hidden="true" class="fa fa-youtube-play"></i> YouTube</h2>
 				<p><a href="https://www.youtube.com/watch?v=V49IovRSJDs">Ecological Succession</a></p>
