--- a/redwoods.html
+++ b/redwoods.html
@@ -26,9 +26,10 @@
 	<div class="tabs" data-tabs="">
 		<div class="tab">
 			<input checked id="tab-1" name="tabgroup" type="radio"> <label for="tab-1">Books</label>
-			<div class="tab__content">
+			<div class="tab__content ">
 				<br>
-				<h2><i aria-hidden="true" class="fa fa-book"></i> Books</h2>
+				<h2><i aria-hidden="true" class="fa fa-book "></i> Books</h2>
+				<div class="books_italics">
 				<p><em><a href="http://jaredfarmer.net/books/trees-in-paradise/">Trees in Paradise: A California History</a></em></p><em></em>
 				<p><em><a href="https://en.wikipedia.org/wiki/The_Wild_Trees">The Wild Trees</a></em></p><em></em>
 				<p><em><a href="http://www.goodreads.com/book/show/695012.The_Last_Stand">The Last Stand: The War Between Wall Street and Main Street over California's Ancient Redwoods
