--- a/try.html
+++ b/try.html
@@ -1,6 +1,1 @@
-
-{% assign my_string = "Hello World!" %}
-
-
-{% assign my_int = 25 %}
-{% assign my_float = 39.756 %}
+It's very easy to make some words **bold** and other words *italic* with Markdown. You can even [link to Google!](http://google.com)
