--- a/try.html
+++ b/try.html
@@ -1,1 +1,22 @@
-It's very easy to make some words **bold** and other words *italic* with Markdown. You can even [link to Google!](http://google.com)
+<!DOCTYPE html>
+<html>
+<title>W3.CSS</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<body>
+
+  1. Item 1
+  1. Item 2
+  1. Item 3
+     1. Item 3a
+     1. Item 3b
+
+
+
+     ![GitHub Logo](/images/logo.png)
+     Format: ![Alt Text](url)
+
+
+
+</body>
+</html>
