--- a/resume.html
+++ b/resume.html
@@ -95,6 +95,7 @@
 						<li>Git</li>
 						<li>HTML/CSS</li>
 						<li>JavaScript/jQuery</li>
+						<li>MAMP</li>
 						<li>MySQL</li>
 						<li>CMS/CRUD</li>
             <li>PHP</li>
