--- a/resume2.html
+++ b/resume2.html
@@ -4,9 +4,8 @@
 	<meta content="text/html; charset=utf-8" http-equiv="content-type">
 	<meta content="width=device-width, initial-scale=1" name="viewport">
 	<title>Kiron Roy: Resume</title>
-	<link href="resumestyle.css" rel="stylesheet" type="text/css">
-	<link href='https://fonts.googleapis.com/css?family=Heebo:400,300' rel='stylesheet' type='text/css'><!-- For Safari Browser: -->
-	<link href="apple-touch-icon-192x192-precomposed.png" rel="icon" sizes="192x192"><!-- For third-generation iPad with high-resolution Retina display: -->
+	<link href="resumestyle2.css" rel="stylesheet" type="text/css">
+  <link href="apple-touch-icon-192x192-precomposed.png" rel="icon" sizes="192x192"><!-- For third-generation iPad with high-resolution Retina display: -->
 	<link href="apple-touch-icon-144x144-precomposed.png" rel="apple-touch-icon-precomposed" sizes="144x144"><!-- For iPhone with high-resolution Retina display: -->
 	<link href="apple-touch-icon-114x114-precomposed.png" rel="apple-touch-icon-precomposed" sizes="114x114"><!-- For first- and second-generation iPad: -->
 	<link href="apple-touch-icon-72x72-precomposed.png" rel="apple-touch-icon-precomposed" sizes="72x72"><!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
@@ -17,7 +16,7 @@
 	<div class="instaFade" id="cv">
 		<div class="mainDetails">
 			<div class="quickFade" id="headshot">
-				<a href="http://kironroy.github.io"><img alt="Kiron Roy Logo" src="logo2.svg" style="width:90px;height:90px;"></a>
+				<a href="http://kironroy.github.io"><img alt="Kiron Roy Logo" src="logo_reverse.svg" style="width:90px;height:90px;"></a>
 			</div>
 			<div id="name">
 				<br>
@@ -32,7 +31,7 @@
 					</li>
 					<li>github wiki: &nbsp; <a href="https://github.com/kironroy/kironroy.github.io/wiki">kironroy wiki</a>
 					</li>
-					<li>website: &nbsp; <a href="https://kiron-roy-portfolio.glitch.me/">glitch portfolio</a>
+					<li>website: &nbsp; <a href="http://kironroy.github.io/">portfolio</a>
 					</li>
 					<li></li>
 				</ul>
